# Soduku

./: CMakeLists.txt  README.md  finals.txt  puzzle.txt  sudoku.cpp  sudoku.h  sudoku.txt  test.cpp
